# monorepo

./: README.md
project-one/: README.md  pyproject.toml
project-one/project_one/: __init__.py
project-three/: README.md  pyproject.toml
project-three/project_three/: __init__.py
project-two/: README.md  pyproject.toml  requirements-test.txt  requirements.txt
project-two/project_two/: __init__.py
project-two/tests/: __init__.py  test_init.py
