[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-two"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Waylon S. Walker", email = "waylon@waylonwalker.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
'project_one @ {root:uri}/../project-one'
]
dynamic = ["version"]

[tool.hatch.metadata]
allow-direct-references=true

[project.urls]
Documentation = "https://github.com/unknown/project-two#readme"
Issues = "https://github.com/unknown/project-two/issues"
Source = "https://github.com/unknown/project-two"

[tool.hatch.version]
path = "project_two/__about__.py"

[tool.hatch.envs.codev]
post-install-commands = [
"editable"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.default]
type = "pip-deepfreeze"
post-install-commands = [
"editable"
]
features = ['test']
# dependencies = [
#   "pytest",
#   "pytest-cov",
#   'project_one @ {root:uri}/../project-one'
# ]
[tool.hatch.envs.default.scripts]
editable = [
    "echo 'start post-install'",
    "python -m pip install -e ../project-one",
    "python -m pip install python-lsp-server jedi-language-server",

]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=project_two --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "project_two/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
